--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url 'https://www.dimdev.org/maven/' }
+        mavenCentral()
+        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://files.minecraftforge.net/maven' }
         maven { url 'http://repo.spongepowered.org/maven' }
     }
     dependencies {
-        classpath 'org.dimdev:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'com.github.Chocohead:ForgeGradle:jitpack-SNAPSHOT'
         classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
     }
 }
@@ -16,7 +17,7 @@ apply plugin: 'java'
 
 group 'com.mrcrayfish'
 version '0.1.0'
-archivesBaseName = 'furniture-rift'
+archivesBaseName = 'furniture-rift1.13.2'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -24,15 +25,17 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     maven { url 'https://www.dimdev.org/maven/' }
+    maven { url 'https://www.jitpack.io' }
 }
 
 dependencies {
-    implementation 'org.dimdev:rift:1.0.4-65:dev'
+    implementation 'com.github.Chocohead:Rift:jitpack-SNAPSHOT:dev'
+    implementation 'org.dimdev:mixin:0.7.11-SNAPSHOT'
 }
 
 minecraft {
-    version = '1.13'
-    mappings = 'snapshot_20180826'
+    version = '1.13.2'
+    mappings = 'snapshot_20181130'
     runDir = 'run'
     tweakClass = 'org.dimdev.riftloader.launch.RiftLoaderClientTweaker'
 }
